bon/tests/integration/ui/compile_fail/builder_derives.stderr
error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
 --> tests/integration/ui/compile_fail/builder_derives.rs:8:16
  |
8 |     non_debug: NoTraitImpls,
  |                ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
  |
note: required by a bound in `assert_clone`
 --> src/private/mod.rs
  |
  | pub fn assert_clone<T: Clone>() {}
  |                        ^^^^^ required by this bound in `assert_clone`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
  |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
 --> tests/integration/ui/compile_fail/builder_derives.rs:8:16
  |
8 |     non_debug: NoTraitImpls,
  |                ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
  |
  = help: the trait `Debug` is not implemented for `NoTraitImpls`
  = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `assert_debug`
 --> src/private/mod.rs
  |
  | pub fn assert_debug<T: ?Sized + core::fmt::Debug>() {}
  |                                 ^^^^^^^^^^^^^^^^ required by this bound in `assert_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
  |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:13:38
   |
13 | fn fn_contains_non_trait(_non_debug: NoTraitImpls, _x: u32) {}
   |                                      ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `assert_clone`
  --> src/private/mod.rs
   |
   | pub fn assert_clone<T: Clone>() {}
   |                        ^^^^^ required by this bound in `assert_clone`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:13:38
   |
13 | fn fn_contains_non_trait(_non_debug: NoTraitImpls, _x: u32) {}
   |                                      ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `assert_debug`
  --> src/private/mod.rs
   |
   | pub fn assert_debug<T: ?Sized + core::fmt::Debug>() {}
   |                                 ^^^^^^^^^^^^^^^^ required by this bound in `assert_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |

error[E0277]: the trait bound `NoTraitImpls: Clone` is not satisfied
  --> tests/integration/ui/compile_fail/builder_derives.rs:18:46
   |
18 |     fn method_contains_non_trait(_non_debug: NoTraitImpls, _x: u32) {}
   |                                              ^^^^^^^^^^^^ the trait `Clone` is not implemented for `NoTraitImpls`
   |
note: required by a bound in `assert_clone`
  --> src/private/mod.rs
   |
   | pub fn assert_clone<T: Clone>() {}
   |                        ^^^^^ required by this bound in `assert_clone`
help: consider annotating `NoTraitImpls` with `#[derive(Clone)]`
   |
3  + #[derive(Clone)]
4  | struct NoTraitImpls;
   |

error[E0277]: `NoTraitImpls` doesn't implement `Debug`
  --> tests/integration/ui/compile_fail/builder_derives.rs:18:46
   |
18 |     fn method_contains_non_trait(_non_debug: NoTraitImpls, _x: u32) {}
   |                                              ^^^^^^^^^^^^ `NoTraitImpls` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoTraitImpls`
   = note: add `#[derive(Debug)]` to `NoTraitImpls` or manually `impl Debug for NoTraitImpls`
note: required by a bound in `assert_debug`
  --> src/private/mod.rs
   |
   | pub fn assert_debug<T: ?Sized + core::fmt::Debug>() {}
   |                                 ^^^^^^^^^^^^^^^^ required by this bound in `assert_debug`
help: consider annotating `NoTraitImpls` with `#[derive(Debug)]`
   |
3  + #[derive(Debug)]
4  | struct NoTraitImpls;
   |
